syntax = "proto3";

package NAlice.NData;
option go_package = "a.yandex-team.ru/alice/protos/data";
option java_package = "ru.yandex.alice.protos.data";

import "mapreduce/yt/interface/protos/extension.proto";

message TNewsProvider {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string NewsSource = 1 [json_name = "news_source", (NYT.column_name) = "news_source"];
    // optional
    string Rubric = 2 [json_name = "rubric", (NYT.column_name) = "rubric"];
}
